<resources>
    <string name="app_name">Care Support</string>
    <string name="title_activity_maps">Map</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Signin">Sign In</string>
    <string name="Logo">Logo</string>
    <string name="title_activity_attribute__a3">Attribute_Activity_a3</string>
    <string name="search_text">Search</string>
    <string name="search_hint">hint</string>
    <string name="submit_text">Submit</string>
    <string name="search_title">Search Title</string>
</resources>
